TableRef: write <tableParts> before <extLst>, resolves tdf#96049

Excel expects this order, so let XclExpTables be managed as
XclExpRecordBase in the sheet's XclExpRecordList.

Change-Id: If2cefc255c74688661e861a26218564117b1e3ce